--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               <div class="feature">
                 <div class="feature_item">
                   <div class="f_item_img">
-                    <img src="img/image 65.png" />
+                    <img class="rotate_image" src="img/image 65.png" />
                   </div>
                   <div class="f_item_text">
                     <h3>3D modeling & art</h3>
@@ -58,7 +58,7 @@
                 </div>
                 <div class="feature_item">
                   <div class="f_item_img">
-                    <img src="img/image 66.png" />
+                    <img class="rotate_image" src="img/image 66.png" />
                   </div>
                   <div class="f_item_text">
                     <h3>3D modeling & art</h3>
@@ -74,7 +74,7 @@
                 </div>
                 <div class="feature_item">
                   <div class="f_item_img">
-                    <img src="img/image 67.png" />
+                    <img class="rotate_image" src="img/image 67.png" />
                   </div>
                   <div class="f_item_text">
                     <h3>3D modeling & art</h3>
@@ -92,7 +92,7 @@
               <div class="feature">
                 <div class="feature_item">
                   <div class="f_item_img">
-                    <img src="img/image 58.png" />
+                    <img class="rotate_image" src="img/image 58.png" />
                   </div>
                   <div class="f_item_text">
                     <h3>3D modeling & art</h3>
@@ -108,7 +108,7 @@
                 </div>
                 <div class="feature_item">
                   <div class="f_item_img">
-                    <img src="img/image 62.png" />
+                    <img class="rotate_image" src="img/image 62.png" />
                   </div>
                   <div class="f_item_text">
                     <h3>3D modeling & art</h3>
@@ -124,7 +124,7 @@
                 </div>
                 <div class="feature_item">
                   <div class="f_item_img">
-                    <img src="img/image 68.png" />
+                    <img class="rotate_image" src="img/image 68.png" />
                   </div>
                   <div class="f_item_text">
                     <h3>3D modeling & art</h3>
